added openApi comments for users handlers
