# internal/modules/auth/handler.go
@@ -10,6 +10,8 @@ import (
 	apperrors "github.com/DavidMovas/Movies-Reviews/internal/error"
 	"github.com/labstack/echo"
 	"gopkg.in/validator.v2"
+
+	_ "github.com/DavidMovas/Movies-Reviews/docs"
 )
 
 type Handler struct {
@@ -22,6 +24,17 @@ func NewHandler(authService *Service) *Handler {
 	}
 }
 
+// Register @Summary Register a new user
+// @Description Register a new user
+// @ID register
+// @Tags auth
+// @Accept json
+// @Produce json
+// @Param user body RegisterUserRequest true "User"
+// @Success 201 {object} contracts.User "User"
+// @Failure 400 {object} apperrors.Error "Invalid email or password"
+// @Failure 500 {object} apperrors.Error "Internal server error"
+// @Router /auth/register [post]
 func (h *Handler) Register(c echo.Context) error {
 	req, err := echox.BindAndValidate[RegisterUserRequest](c)
 	if err != nil {
@@ -44,6 +57,18 @@ func (h *Handler) Register(c echo.Context) error {
 	return c.JSON(http.StatusCreated, user)
 }
 
+// Login @Summary Login a user
+// @Description Login a user and return an access token
+// @ID login
+// @Tags auth
+// @Accept json
+// @Produce json
+// @Param user body LoginUserRequest true "User"
+// @Success 200 {object} LoginUserResponse "Access token"
+// @Failure 400 {object} apperrors.Error "Invalid email or password"
+// @Failure 404 {object} apperrors.Error "User not found"
+// @Failure 500 {object} apperrors.Error "Internal server error"
+// @Router /auth/login [post]
 func (h *Handler) Login(c echo.Context) error {
 	req, err := echox.BindAndValidate[LoginUserRequest](c)
 	if err != nil {
